<resources>
    <string name="kakao_app_key">ca607bfde643f9229e62df0f3498eb7f</string>
    <string name="sys_backpress_msg">정말 떠나시려면 뒤로가기 버튼을 한번 더 눌러주세요</string>
    <string name="notice_permission_need">권한을 먼저 허용해주세요.</string>

    <string name="str_wrong_id_pw">아이디와 비밀번호가 일치하지 않습니다.\n 확인 후 다시 입력해주세요.</string>
    <string name="str_login_save_id">아이디 저장</string>
    <string name="str_login_auth">자동 로그인</string>
    <string name="str_login">시작하기</string>
    <string name="str_id">아이디</string>
    <string name="str_pw">비밀번호</string>
    <string name="str_wrong_user_per">카카오톡 가입이 되어있는 사용자 입니다.</string>
    <string name="str_wrong_user_permission">권한이 없습니다. 다시 시도해주세요.</string>
    <string name="str_network_fail">네트워크가 원할하지 않습니다. 다시확인해주세요</string>
    <string name="str_continue">계속하기</string>
    <string name="str_wrong_length_pw">아직 8자리가 되지 않았어요!</string>
    <string name="str_wrong_same_pw">비밀번호가 같지 않아요 :(</string>
    <string name="str_letter_please"> 편지 내용을 입력해주세요</string>
    <string name="str_email_insert">이메일 주소를 입력해주세요.</string>
    <string name="str_password_insert">비밀번호를 입력해주세요.</string>
    <string name="str_phone_please_title">번호인증을 해주세요 :)</string>
    <string name="str_phone_please_sub">정확한 편지전달을 위해서 필요해요.</string>
    <string name="str_phone_placeholder_input">(-)없이 번호를 입력해 주세요.</string>
    <string name="str_phone_placeholder_output">인증번호를 입력해 주세요.</string>
    <string name="str_signup_success">시작하기</string>

    <string name="str_weather">날씨</string>
    <string name="str_nugu">누구에게</string>

    <string name="str_brush">물감</string>
    <string name="str_paper">재질</string>

    <string name="str_imoge">이모지</string>
    <string name="str_recommendation">추천</string>
    <string name="str_basic">기본</string>
    <string name="str_material">재질</string>
    <string name="str_event">이벤트</string>
    <string name="str_pattern">패턴</string>

    <string name="str_font">글꼴</string>
    <string name="str_thickness">굵기</string>
    <string name="str_color">색상</string>

    <string name="str_love">사랑</string>
    <string name="str_freind">우정</string>
    <string name="str_text">글자</string>
    <string name="str_season">계절</string>
    <string name="str_charactor">캐릭터</string>
    <string name="str_main_title">누구에게\n편지를 써볼까요?</string>
    <string name="str_pull">&lt;&lt; 밀어서 편지쓰기</string>
    <string name="str_signup_certification">확인하기</string>
    <string name="str_hello">안녕하세요 :)</string>

    <string name="str_successful">완료</string>
    <string name="str_input_image">사진을 넣어주세요.</string>
    <string name="str_preview">미리보기</string>
    <string name="str_send">전송하기</string>
    <string name="str_send_success">편지가 성공적으로\n보내졌어요 :)</string>
    <string name="str_go_back_home">홈으로 돌아가기</string>
</resources>
