<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.nexters.towhom.ui.signin.SigninViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <TextView
            android:id="@+id/txt_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_hello"
            app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:textSize="24dp"
                android:textColor="@color/colorBlack"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="0dp"
                android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/id_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/str_id"
                android:background="@drawable/ic_empty_rect"
            android:text="@={viewModel.idLiveData}"
            app:layout_constraintTop_toBottomOf="@id/txt_hello"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:padding="14dp"
                />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/id_clear_btn"
            style="@style/textClearImageButtonStyle"
            android:background="#000"
            android:onClick='@{() ->viewModel.clearEditText("idClear")}'
            android:src="@drawable/abc_vector_test"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/id_edit"
            app:layout_constraintEnd_toEndOf="@id/id_edit"
            app:layout_constraintTop_toTopOf="@id/id_edit"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/pw_edit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:hint="@string/str_pw"
                android:background="@drawable/ic_empty_rect"
            android:inputType="textPassword"
            android:text="@={viewModel.pwLiveData}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_min="50dp"
            app:layout_constraintStart_toStartOf="@id/id_edit"
            app:layout_constraintTop_toBottomOf="@id/id_edit"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:padding="14dp"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/pw_clear_btn"
            style="@style/textClearImageButtonStyle"
            android:background="#000"
            android:onClick='@{() ->viewModel.clearEditText("pwClear")}'
            android:src="@drawable/abc_vector_test"

            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/pw_edit"
            app:layout_constraintEnd_toEndOf="@id/pw_edit"
            app:layout_constraintTop_toTopOf="@id/pw_edit"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/wrong_msg_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_8"
            android:layout_marginTop="@dimen/layout_8"
            android:ems="10"
            android:textColor="@color/colorWrongRed"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pw_edit"
            tools:text="@string/str_wrong_id_pw" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/id_auto_cb"
            style="@style/loginCheckBox"
            android:layout_marginStart="@dimen/layout_4"
            android:text="@string/str_login_save_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wrong_msg_tv"
            tools:ignore="SpUsage" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/login_auto_cb"
            style="@style/loginCheckBox"
            android:layout_marginStart="@dimen/layout_24"
            android:text="@string/str_login_auth"
            app:layout_constraintStart_toEndOf="@id/id_auto_cb"
            app:layout_constraintTop_toBottomOf="@id/wrong_msg_tv"
            tools:ignore="SpUsage" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_login_btn"
            android:enabled="false"
            android:minHeight="54dp"
            android:onClick='@{() ->viewModel.tryLogin()}'
            android:text="@string/str_login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_auto_cb" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>