<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="com.nexters.towhom.ui.signup.PhoneCertificationViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff">


        <TextView
                android:id="@+id/phone_insert_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/str_phone_please_title"
                android:textColor="#000"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/phone_insert_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="0dp"
                android:text="@string/str_phone_please_sub"
                android:textColor="#000"
                android:textSize="12dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_insert_text" />


        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phone_insert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/ic_empty_rect"
                android:hint="@string/str_phone_placeholder_input"
                android:padding="14dp"
                android:text="@={viewModel.phoneInsertLiveData}"
                app:layout_constraintHeight_min="50dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_insert_text2" />

        <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/phone_insert_clear_btn"
                style="@style/textClearImageButtonStyle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="#00ff0000"
                android:onClick='@{() ->viewModel.clearEditText("phoneInsertClear")}'
                android:src="@drawable/ic_text_delete2x"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/phone_insert"
                app:layout_constraintEnd_toEndOf="@id/phone_insert"
                app:layout_constraintTop_toTopOf="@id/phone_insert"
                app:layout_constraintEnd_toStartOf="@id/phone_certification_btn"
                tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/phone_certification_btn"
                style="@style/textClearImageButtonStyle"
                android:layout_width="64dp"
                android:layout_height="32dp"
                android:background="@drawable/selector_login_btn"
                android:text="@string/str_signup_certification"
                app:layout_constraintBottom_toBottomOf="@id/phone_insert"
                app:layout_constraintTop_toTopOf="@id/phone_insert"
                app:layout_constraintEnd_toEndOf="@id/phone_insert"
                tools:visibility="visible"
                android:textColor="@color/white"
                android:textSize="12dp"/>
        <!--  app:layout_constraintEnd_toStartOf=""-->


        <!--<androidx.appcompat.widget.AppCompatTextView-->
        <!--android:id="@+id/pw_text"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="15dp"-->
        <!--android:text_default="PW "-->
        <!--android:textColor="#000" />-->

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phone_certification_insert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/ic_empty_rect"
                android:hint="@string/str_phone_placeholder_output"
                android:inputType="textPassword"
                android:text="@={viewModel.phoneCertificationLiveData}"
                android:padding="14dp"
                app:layout_constraintHeight_min="50dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_insert" />
        <!-- android:text="@={viewModel.pwInsertCheckLiveData}"-->


        <!--android:text_default="@={viewModel.pwLiveData}"-->
        <!-- 이부분때문에 계속 에러잡힘 -->


        <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/phone_certification_clear_btn"
                style="@style/textClearImageButtonStyle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="#00ff0000"
                android:onClick='@{() ->viewModel.clearEditText("phoneCertificationClear")}'
                android:src="@drawable/ic_text_delete2x"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/phone_certification_insert"
                app:layout_constraintEnd_toEndOf="@id/phone_certification_insert"
                app:layout_constraintTop_toTopOf="@id/phone_certification_insert"
                app:layout_constraintEnd_toStartOf="@id/phone_certification_time"
                tools:visibility="visible" />

        <TextView
                android:id="@+id/phone_certification_time"
                style="@style/textClearImageButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="05:00"
                app:layout_constraintBottom_toBottomOf="@id/phone_certification_insert"
                app:layout_constraintTop_toTopOf="@id/phone_certification_insert"
                app:layout_constraintEnd_toEndOf="@id/phone_certification_insert"
                tools:visibility="visible"
                android:textColor="@color/grapefruit"
                android:layout_marginEnd="16dp"
                android:textSize="12dp"/>


        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/phone_cert_btn"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/selector_login_btn"
                android:enabled="false"
                android:onClick='@{() ->viewModel.trySignup()}'
                android:text="@string/str_signup_success"
                android:textColor="@color/white"
                android:textSize="@dimen/text_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_certification_insert" />

        <!--android:onClick='@{() ->viewModel.tryContinue()}'-->
        <!-- 이부분때문에 에러잡힘 -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>